--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
       property="og:title"
       content="<%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다."
     />
-    <meta property="og:image" content="/preview_image.png" />
+    <meta property="og:image" content="./preview_image.png" />
     <meta property="og:url" content="%BASE_URL%/" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
-    <link rel="preload" href="/MapoGoldenPierA.woff" as="font" crossorigin />
-    <link rel="preload" href="/AlluraRegular.woff" as="font" crossorigin />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/font.css" />
+
+    <!-- ✅ 경로를 모두 상대경로로 변경 -->
+    <link rel="preload" href="./MapoGoldenPierA.woff" as="font" crossorigin />
+    <link rel="preload" href="./AlluraRegular.woff" as="font" crossorigin />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="./font.css" />
+
     <title><%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다.</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <!-- ✅ 절대경로(/src/...) → 상대경로(./src/...) 로 수정 -->
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
