--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta property="og:type" content="website" />
     <meta
@@ -12,10 +12,10 @@
       content="<%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다."
     />
     <meta property="og:image" content="./preview_image.png" />
-    <meta property="og:url" content="%BASE_URL%/" />
+    <meta property="og:url" content="./" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
 
-    <!-- ✅ 경로를 모두 상대경로로 변경 -->
+    <!-- ✅ 수정된 부분 -->
     <link rel="preload" href="./MapoGoldenPierA.woff" as="font" crossorigin />
     <link rel="preload" href="./AlluraRegular.woff" as="font" crossorigin />
     <link rel="manifest" href="./manifest.json" />
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ 절대경로(/src/...) → 상대경로(./src/...) 로 수정 -->
+    <!-- ✅ 여기도 ./ 로 수정 -->
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
