--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -15,11 +13,7 @@
     <meta property="og:url" content="%BASE_URL%/" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
 
-    <!-- 폰트 및 매니페스트 -->
-    <link rel="preload" href="/MapoGoldenPierA.woff" as="font" crossorigin />
-    <link rel="preload" href="/AlluraRegular.woff" as="font" crossorigin />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/favicon.ico" />
+    <!-- ✅ 여기가 핵심 -->
     <link rel="stylesheet" href="/font.css" />
 
     <title><%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다.</title>
