--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="<%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다." />
+    <meta property="og:title" content="❤️❤️❤️" />
     <meta property="og:image" content="/preview_image.png" />
     <meta property="og:url" content="%BASE_URL%/" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
@@ -13,7 +13,7 @@
     <!-- ✅ font.css 복원 (루트 경로 대신 상대경로 사용) -->
     <link rel="stylesheet" href="./font.css" />
 
-    <title><%= GROOM_FULLNAME %> ❤️ <%= BRIDE_FULLNAME %> 결혼합니다.</title>
+    <title> ❤️ </title>
   </head>
   <body>
     <div id="root"></div>
