--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- 🔒 확대 방지 설정 -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="❤️❤️❤️" />
@@ -10,7 +15,6 @@
     <meta property="og:url" content="%BASE_URL%/" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
 
-    <!-- ✅ font.css 복원 (루트 경로 대신 상대경로 사용) -->
     <link rel="stylesheet" href="./font.css" />
 
     <title> ❤️ </title>
@@ -19,4 +23,4 @@
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
-</html> 
+</html>
